[#276] [#277] [#280] Compile and Run based on Java 21